# speemail

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  alembic.ini  fly.toml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_remove_auto_send.py  003_add_tasks_memory_chat.py  004_add_ignore_rules.py  005_add_email_classification_feedback.py  007_add_task_source_email.py  008_reclassify_false_negatives.py  009_reclassify_signing_false_negs.py  5091786e556a_add_watched_threads_table.py  6250de3c6c8c_add_sent_email_scans_expand_watched_.py
scripts/: predeploy.sh
speemail/: __main__.py  config.py  main.py  scheduler.py
speemail/api/: app.py  deps.py
speemail/api/routes/: auth.py  chat.py  dashboard.py  emails.py  inbox.py  login.py  scheduler_routes.py  settings.py  tasks.py  watched_threads.py
speemail/auth/: __init__.py  graph_auth.py
speemail/middleware/: auth_middleware.py
speemail/models/: __init__.py  database.py  tables.py
speemail/services/: ai_chat.py  ai_engine.py  classification_service.py  email_poller.py  email_sender.py  inbox_service.py  sent_classification_service.py  task_extraction_service.py  unresponded_service.py  user_identity.py  watched_threads_service.py
speemail/static/: keyboard.js  style.css
speemail/templates/: auth_error.html  base.html  dashboard.html  device_flow.html  history.html  home.html  inbox.html  login.html  settings.html  tasks.html
speemail/templates/partials/: _awaiting_list.html  (+17 more)
tests/: test_needs_reply.py
